--- a/public/css/deliveryPerson/deliveries.css
+++ b/public/css/deliveryPerson/deliveries.css
@@ -13,7 +13,7 @@
     /* position: absolute; */
 }
 .delivery-body{
-    margin: 10vh 70px;
+    margin: 10vh 100px;
     text-decoration: none;
     color: black;
     text-align: center;
@@ -29,7 +29,7 @@
     font-weight: 900;
 }
 #Ongoing-Deliveries,#Delivery-History{
-    margin-left: 25%;
+    margin-left: 100px;
 }
 table tbody tr td:last-of-type{
     background: rgb(255, 255, 255);
