--- a/public/css/deliveryPerson/deliveries2.css
+++ b/public/css/deliveryPerson/deliveries2.css
@@ -7,11 +7,11 @@
 }
 .deliverypg-topic{
     margin-top: 30px;
-    margin-left: 20%;
+    margin-left: 100px;
 }
 .delivery-container{
     margin-top: 20px;
-    margin-left: 20%;
+    margin-left: 100px;
     display: grid;
     align-content: space-between;
     grid-template-columns: repeat(3, 1fr);
