--- a/public/css/deliveryPerson/deliveryPerson-deliveries.css
+++ b/public/css/deliveryPerson/deliveryPerson-deliveries.css
@@ -8,7 +8,7 @@
 .special-notice{
     display: flex;
     flex-direction: column;
-    margin-left: 20%;
+    margin-left: 100px;
     margin-top: 5%;
 }
 .special-notice div{
@@ -20,16 +20,19 @@
     border: 2px solid #ff9900;
     box-shadow: 0 1px 5px rgb(104 104 104 / 80%);
 }
-.delivery-body h1{
-    margin-top: 20px;
-    margin-left: 20%;
+.delivery-body .del-topic{
+    display: flex;
+    margin-left: 100px;
+    margin-top: 30px;
+    font-size: 22px;
+    font-weight: bold;
 }
 
 .delivery-body .row{
     display: flex;
     flex-wrap: wrap;
     margin-right: 150px;
-    margin-left: 20%;
+    margin-left: 100px;
 }
 .delivery-body .row .col{
     min-height: 1px;
@@ -47,20 +50,31 @@
     margin-top: 10px;
     margin-left: 0;
 }
+.delivery-body .cal-table{
+    margin-top: 50px;
+    margin-left: 100px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+}
 #Ongoing-Deliveries tbody tr .far{
    color: black;
    font-size: 20px;
 }
 /* .delivery-history{
     display: flex;
-    margin-left: 20%;
+    margin-left: 100px;
 } */
 
-.delivery-history .table-history{
-    margin-top: 10vh;
-    margin-left: 50%;
+.cal-table #table-history{
+    width: 90%;
+    margin-left: 5%;
 } 
+.cal-table .historytable{
+    width: 100%;
+}
 .delivery-body .date-selection{
-    margin-left: 20%;
+    margin-left: 100px;
     margin-top: 20px;
 }
