--- a/public/css/deliveryPerson/deliveryPerson-reveiws.css
+++ b/public/css/deliveryPerson/deliveryPerson-reveiws.css
@@ -5,16 +5,20 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif; 
 }
-.reviews-body h1{
-    margin-top: 20px;
-    margin-left: 20%;
+.reviews-body .rev-topic{
+    display: flex;
+    margin-left: 100px;
+    margin-top: 30px;
+    font-size: 22px;
+    font-weight: bold;
+
 }
 
 .reviews-body .row{
     display: flex;
     flex-wrap: wrap;
     margin-right: 150px;
-    margin-left: 20%;
+    margin-left: 100px;
 }
 .reviews-body .row .col{
     min-height: 1px;
@@ -34,11 +38,8 @@
 }
 
 #reviews-table{
-    margin-left: 20%;
+    margin-left: 100px;
 }
-table tbody tr:last-of-type{
-    border-bottom: 2px solid #df7511;
-} 
 #far-star{
     color: rgb(0, 0, 0);
     font-size: 15px;
