--- a/public/css/deliveryPerson/table.css
+++ b/public/css/deliveryPerson/table.css
@@ -7,7 +7,7 @@
 }
 h3{
     margin-top: 3%;
-    margin-left: 20%;
+    margin-left: 100px;
     padding: 8px;
     font-size: 20px;
     font-weight: bolder;
@@ -16,7 +16,7 @@ table{
     width: 60%;
     border-collapse: collapse;
     
-    margin-left: 20%;
+    margin-left: 100px;
     margin-bottom: 5%;
 }
 table td{
