--- a/public/css/owner/owner-header.css
+++ b/public/css/owner/owner-header.css
@@ -5,15 +5,10 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif; 
+
+
 }
-a{
-    text-decoration: none;
-    color: white;
-}
- a:hover{
-    color: rgb(255,138,0);   
-}
-/* side-navigation css */
+
 .container{
     position: absolute;
     top: 0;
@@ -26,9 +21,10 @@ a{
     width: 70px;
     height: 100vh;
     background-color: rgb(0, 0, 0);
+    /* border-radius: 5px; */
     overflow: hidden;
     box-shadow: 0 5px 15px rgb(0,0,0,0,2);
-    transition: 0,5px;
+    transition: 0.5s;
 
 }
 .container .navigation.active{
@@ -73,7 +69,7 @@ a{
 
 }
 .container .navigation ul li:hover{
-    background: rgba(37, 37, 37, 0.9);
+    background: rgba(255,255,255,0.9);
     color: rgb(255,138,0);
 }
 .container .navigation ul li a:hover{
@@ -97,6 +93,8 @@ a{
     height: 60px;
     line-height: 60px;
     white-space: nowrap;
+     
+
 }
 .toggle{
     position: fixed;
@@ -107,7 +105,7 @@ a{
     color: rgb(255, 255, 255);
     cursor: pointer;
 }
-/*top header css*/
+
 .header-container{
     display: flex;
     justify-content: flex-start;
@@ -133,32 +131,32 @@ a{
 .header-container .bake-it .bakeit{
     font-family: 'Merienda', cursive;
 }
-.header-container .header-icons{
-    display: flex;
-    justify-content: space-evenly;
-    flex-grow: 1;
-    /* text-align: left; */
+
+
+a{
+    text-decoration: none;
     color: white;
-    align-items: center;
-    align-content: space-between;
-    flex-wrap: nowrap;
+}
+ a:hover{
+    color: rgb(255,138,0);
     
 }
-/* .fa-user{
+.header-container .header-icons{
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 1;
+    text-align: left;
+    color: white;
+    
+}
+.fa-user{
     margin-right: 20px;
 }
 .fa-sign-out-alt{
     margin-right: 5px;
-} */
-
-#available{
-    display: none;                                   
-    position: absolute;
-    padding-left: 10%;
-    margin-left: 151px;
-    height: fit-content;
-    color: rgb(255 138 0);
 }
+
+
 #arrowAnim {
     /* width: 100vw;
     height: 100vh; */
@@ -215,29 +213,3 @@ a{
      80% { opacity:1; transform: translateX(-2vw); }  
     100% { opacity:0; transform: translateX(-4vw); } 
   }
-
-  
-/* Responsive */
-@media (max-width: 700px) {
-    .header-container{
-      width: 100%;
-      font-size: 15px;
-    }
-    .header-container .bake-it{
-      font-size: 15px;
-    }
-    .header-container .header-icons{
-        flex-grow: 1;
-    }
-    .header-container .header-icons .text{
-        display: none;
-    }
-    
-  }
-  
-  @media (max-width: 500px) {
-    .header-container{
-        width: 100%;
-      }
-  }
-  
