--- a/public/css/deliveryPerson/table.css
+++ b/public/css/deliveryPerson/table.css
@@ -12,6 +12,7 @@ h3{
     font-size: 20px;
     font-weight: bolder;
 }
+
 table{
     width: 60%;
     border-collapse: collapse;
@@ -33,6 +34,13 @@ table thead{
     font-weight: bold;
     height: 40px;
 }
+table tbody tr td a{
+    color: black;
+    font-weight: 800;
+}
+table tbody tr td a:hover{
+    color: rgb(255, 138, 0);
+}
 tr:nth-child(even){background-color: #f2f2f2;}
 tbody tr:hover {border-color: #ddd;}
 /* table tbody tr:last-of-type{
@@ -42,6 +50,9 @@ tbody tr:hover {border-color: #ddd;}
     background: rgb(255, 255, 255);
     border: 20px;
 } */
+table tbody tr td button .fas{
+    margin-left: 10px;
+}
 
 /* responsive */
 @media(max-width:480px){
