--- a/public/css/owner/owner-createAccount.css
+++ b/public/css/owner/owner-createAccount.css
@@ -1,77 +1,72 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat&family=Roboto:wght@300&display=swap');
-body{
+*{
+    margin: 0;
     padding: 0;
-    margin: 0%;
-    width: 100%;
-    height: 100vh;
-    
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
-
 .content{
-    width: 70%;
-    height: 80vh;
-    background-color: #ff5a5a;
-    /* position: absolute; */
-    top: 11vh;
-    left: 15%;  
+    /* margin-left: 100px; */
+    margin-bottom: 50px;  
 }
-.topic {
-    position: absolute;
-    top: 1vh;
-    left: 40%;
-    width: 60%;
-    height: 100px;
-    font-size: 30px;
-    font-weight: bold;
-    /* background-color: aqua; */
-    margin: 0px;
-    padding: 0;
-    
+.content .account-container{
+    margin-left: 100px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
-
-.drop-down-btn-div{
-    position: absolute;
-    top: 24vh;
-    width:100%; 
-    height: 160px;
-    float: left;
-    margin-bottom: 2px;
-    margin-top: 30px;
+.content .account-container .topic{
+    font-size: 25px;
+    font-weight: 800;
+    padding: 5px;
+    margin: 20px 0  30px 0;
 }
-.post{
-    width:190px; 
-    height: 140px;
-    float: left;
-    margin-left: 27%;
-    margin-top: 15px;
-
+.content .account-container span{
+    padding: 5px;
+    font-size: 20px;
+    font-weight: 600;
 }
-.branch{
-    width:190px; 
-    height: 140px;
-    float: left;
-    margin-left: 5%;
-    margin-top: 15px;
-
+.content .account-container .profile .fa-user{
+   font-size: 20vh;
+   margin: 10px;
+   padding: 5px 34%;
 }
-
-select{
-    width: 190px;
-    border: none;
-    border: 2px solid rgb(255, 138, 0);
-    box-shadow: 2px 1px #ff5a5a;
-    padding: 10px;
-    color:back;
-    font-weight: bold;
-    margin-top: 30px;
-    font-size: 19px;
-    border-radius: 8px;
-    
-    
+.content .account-container .profile{
+    border-bottom: 3px solid rgb(255,138,0);
+    border-top:  1px solid rgb(255,138,0) ;
 }
-label{
-    font-size: 26px;
-    font-weight: bold;
-    margin-left: 15px;
-
+.content .account-container .text{
+    padding: 5px;
+    border-bottom: 1px solid rgb(255,138,0);
+    margin: 10px 0px;
+}
+.content .account-container #last-text{
+    border-bottom: 3px solid rgb(255,138,0);
+}
+.content .account-container .text-fill input, .content .account-container .text-fill select{
+   width: 100%;
+   background-color: white;
+   border: none;
+   padding: 10px 0;
+   outline: none;
+}
+button{
+	border-radius:  10px;
+    background-color: white;
+    padding :10px 15px;
+    border: 2px solid rgb(255,138,0);
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+button:hover{
+	background-color: rgb(255,138,0);
+	color: white;
+}
+.content .createbtn{
+   margin-left: 77%;
+   margin-bottom: 20px;
 }
