--- a/public/css/deliveryPerson/deliveryPerson-availability.css
+++ b/public/css/deliveryPerson/deliveryPerson-availability.css
@@ -49,10 +49,21 @@
       /* border: 2px solid yellow;*/
 } 
 .click-available > div{
-      padding: 5%;
-      font-size: 20px;
-      border: 2px solid rgba(255, 138, 0, 0.8);
-      box-shadow: 2px 1px rgba(255, 137, 0,1);
+    border-radius:  10px;
+    padding :10px 15px;
+    border: 2px solid rgb(255,138,0);
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.click-available > div:hover{
+      background-color: rgb(255,138,0);
+	color: white;
+}
+.click-available > div> a:hover{
+      color: white
 }
 /* #available,#not-available{
       display: none;
