--- a/public/css/owner/owner-account.css
+++ b/public/css/owner/owner-account.css
@@ -6,10 +6,13 @@
     font-family: 'Montserrat', sans-serif;
 }
 .content{
-    /* margin-left: 100px; */
     margin-bottom: 50px;
+}
+
+.view{
     height: 90vh;
 }
+
 .content .account-container{
     margin-left: 100px;
     margin-bottom: 20px;
