changed some css

--- a/public/css/deliveryPerson/deliveryPerson-deliveries.css
+++ b/public/css/deliveryPerson/deliveryPerson-deliveries.css
@@ -5,7 +5,6 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
-/*delivery notices css*/
 .special-notice{
     display: flex;
     flex-direction: column;
@@ -21,9 +20,6 @@
     border: 2px solid #ff9900;
     box-shadow: 0 1px 5px rgb(104 104 104 / 80%);
 }
-/*delivery notices css*/
-
-
 .delivery-body .del-topic{
     display: flex;
     margin-left: 100px;
@@ -31,7 +27,6 @@
     font-size: 22px;
     font-weight: bold;
 }
-
 .delivery-body .row{
     display: flex;
     flex-wrap: wrap;
@@ -66,11 +61,9 @@
    color: black;
    font-size: 20px;
 }
-/* .delivery-history{
-    display: flex;
-    margin-left: 100px;
-} */
-
+.overview-body{
+    height: 100vh;
+}
 .cal-table #table-history{
     width: 90%;
     margin-left: 5%;
@@ -94,9 +87,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 35px;
     grid-auto-rows: minmax(10vh,auto);
-    /* border: 5px solid rgba(255, 8, 0, 0.507); */
 }
-
 .delivery-container .map{
     grid-area: 1 / 1 / span 1 / span 4;
     display: grid; 
@@ -250,5 +241,4 @@ button:hover{
 
 #cash-topay{
     display: none;
-    
 }
