--- a/public/css/deliveryPerson/deliveryPerson-header.css
+++ b/public/css/deliveryPerson/deliveryPerson-header.css
@@ -144,13 +144,6 @@ a{
     flex-wrap: nowrap;
     
 }
-/* .fa-user{
-    margin-right: 20px;
-}
-.fa-sign-out-alt{
-    margin-right: 5px;
-} */
-
 #available{
     display: none;                                   
     position: absolute;
@@ -216,6 +209,9 @@ a{
     100% { opacity:0; transform: translateX(-4vw); } 
   }
 
+  .side-toggle{
+      display: none;
+  }
   
 /* Responsive */
 @media (max-width: 700px) {
@@ -225,13 +221,49 @@ a{
     }
     .header-container .bake-it{
       font-size: 15px;
+      padding-left: 20px;
     }
     .header-container .header-icons{
+        justify-content: space-between;
         flex-grow: 1;
+        padding-right: 20px;
     }
-    .header-container .header-icons .text{
+    .header-container .header-icons span{
+        margin-right: 10px;
+    }
+    .header-container .header-icons .text,.header-container .header-icons .sign-out{
         display: none;
     }
+    .side-toggle{
+        display: block;
+    }
+    .container {
+        position: absolute;
+        top: 0; 
+        width: 0%;
+        height: 0;
+        background-color: rgb(0, 0, 0);
+    }
+    .container .navigation{
+        display: none;
+        width: 100%;
+        height: auto;
+        margin-top: 7vh;
+        background-color: rgb(10 10 10 / 76%);
+    }
+    .container .navigation ul{
+        top: 0%;
+    }
+    .container .navigation ul li{
+        margin-top: 0%;
+    }
+    
+    #body{
+        margin-left: 0%;
+    }
+    /* .side-toggle .fa-bars{
+        color: white;
+    } */
     
   }
   
