--- a/public/css/bakery_manager/bakery-manager-available-materials.css
+++ b/public/css/bakery_manager/bakery-manager-available-materials.css
@@ -140,14 +140,14 @@ body{
     left: 23.4%;
     top: 75vh; */
     margin-top: 12px;
-    margin-left: 18%;
+    margin-left: 6%;
     margin-bottom: 20px;
-    width: 550px;
+    width: 750px;
     height: 400px;
     border-radius: 10px;
     border: 2px solid rgba(255, 138, 0);
     background-color: white;
-    display: none;
+    display: none; 
 }
 
 .row-pop1{
@@ -201,7 +201,7 @@ body{
 }
 .addbtn{
     /* float: right; */
-    margin-left: 38%;
+    margin-left: 52%;
 }
 .addbtn button{
     width: 79px;
@@ -233,45 +233,40 @@ body{
 
 }
 .name-quantity .item-quantity{
-    margin-left: 0px;
+    margin-left: 193px;
 
 }
-
-
-.input-fileds{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width:380px; 
-    float: left;
-    margin-left: 0%;
-    margin-bottom: 2px;
-    margin-top: 3px;
-}
-.input-fileds label{
-    margin-left: 18px;
-    /* font-family: 'Recursive' , sans-serif; */
-}
-.input-fileds input{
-    width: 40%;
+#room_fileds table{
+    width: 600px;
     height: 30px;
-    float: right;
+    margin-left: 15px;
+    text-align: center;
+}
+#room_fileds table tr td{
+    margin-top: 2px;
+}
+#room_fileds table tr .lable{
+    width: 370px;
+    height: auto;
+    text-align: left;
+    
+   
+}
+#room_fileds table tr .input{
+    width: 200px;
+    height: auto;
+   
+}
+#room_fileds table tr .input input{
+    height: 30px;
     background-color:white;
     border: none;
     border-bottom: 2px solid rgb(255, 138, 0);
     outline: none;
-    margin-left: 22%;
+    margin-left: 22px;
+     
+}
 
-     
-     
-}
-.Quntity{
-    width:100px; 
-    float: left;
-    margin-bottom: 2px;
-    margin-top: 2px;
-    /* margin-right: 70px; */
-}
 .Quntity select{
     width: 90px;
     border: none;
@@ -293,9 +288,9 @@ body{
 
 }
 .savebtn{
-    position: fixed;
-    left: 54%;
-    top: 66%;
+    position: absolute;
+    left: 48.6%;
+    top: 126%;
     width: 79px;
     height: 31px;
     background: #FFFFFF;
@@ -310,4 +305,8 @@ body{
 .savebtn:hover{
     background:rgb(255, 138, 0);
     color: rgb(255, 255, 255);
+}
+#room_fileds{
+    height: 230px;
+    overflow-y: scroll;
 }
