--- a/public/css/deliveryPerson/deliveryPerson-profile.css
+++ b/public/css/deliveryPerson/deliveryPerson-profile.css
@@ -3,4 +3,128 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+
+}
+.profile-container{
+    margin-left: 100px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.middle-section{
+ 
+    /*width: 98%; */
+    height: 95vh;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    font-size: 14px;
+    justify-content: center;
+  
+}
+.details{
+  display: flex;
+  flex-direction: column;
+  /* align-content:stretch; */
+  justify-content: space-between;
+  margin-left: 100px;
+  height: 460px;
+  /* background-color: blueviolet; */
+  
+}
+.details .profile-topic{
+    font-size: 20px;
+}
+.profile{
+    margin-top: 13%;
+}
+
+#user-icon{
+    margin-left: 4px;
+    margin-top: 0px;
+    color: #000000;
+    font-size: 240px;
+    cursor: pointer;
+}
+.owner-name{
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+.details h3{
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+.input-fileds{
+    width:500px; 
+    float: left;
+    margin-bottom: 2px;
+    margin-top: 3px;
+    /* margin-right: 70px; */
+}
+.input-fileds label{
+    font-weight: 600;
+    /* font-family: 'Recursive' , sans-serif; */
+}
+.input-fileds input{
+    width: 100%;
+    height: 30px;
+    float: left;
+    background-color:white;
+    border: none;
+    border-bottom: 2px solid darkgrey;
+    outline: none;
+     /* font-family: 'Recursive' , sans-serif; */
+     
+     
+}
+.btn-update{
+    margin-top: 10px;
+    justify-content: flex-end;
+    display: flex;
+} 
+.btn-update button{
+  width: 200px;
+  height: 35px;
+  font-weight: 3px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: 1px solid rgb(257, 138, 0);
+  background-color: white;
+}
+.btn-update button:hover{
+  background:rgba(134, 127, 127, 0.671);
+  color: rgb(255, 255, 255);
+  border-color: rgb(255, 51, 0);
+}
+
+@media(max-width:700px){
+    .profile-container{
+        margin-left: 0px;
+        margin-top: 0px;
+        height: 0%;
+    }
+    .middle-section{
+        flex-direction: column;
+        align-items: center;
+        height: 0%;
+    }
+    .profile{
+        margin-top: 6%;
+    }
+    #user-icon{
+        font-size: 100px;
+    }
+    .details{
+        margin-left: 0px;
+        height: 0%;
+    }
+    .btn-update{
+        margin-bottom: 20px;
+    }
+    .input-fileds{
+        width: 250px;
+    }
+  
 }
