--- a/public/css/deliveryPerson/deliveryPerson-orderDetails.css
+++ b/public/css/deliveryPerson/deliveryPerson-orderDetails.css
@@ -1,19 +1,25 @@
 section{
-	width: 100%;
-	height: 100vh;
-	font-size: 1.6rem;
+	/* width: 100%; */
+	/* height: 100vh; */
 }
 
 /*Basic Details Starts*/
+.topic{
+	display: flex;
+    margin-left: 100px;
+    margin-top: 30px;
+    font-size: 22px;
+    font-weight: bold;
+}
 .order-details .basic-details{
 	width: 80%;
-	margin: 3rem auto;
+	margin: 3rem 100px 3rem 0;
 }
 .order-details .basic-details table{
 	width: 40%;
 }
 .order-details .basic-details table tr{
-	background-color: #d6d4d2;
+	background-color: #f5f5f5;
 }
 .order-details .basic-details table tr td:first-child{
 	font-weight: bold;
@@ -59,13 +65,13 @@ section{
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
-	align-items: flex-end;
+	/* align-items: flex-end; */
 }
 
 .cart-containter table{
 	width: 80%;
 	border-collapse: collapse;
-	margin: 60px auto;
+	/* margin: 60px 100px 60px auto; */
 	border-spacing: 10px;
 }
 
@@ -189,6 +195,7 @@ section{
 }
 .total-container table tr td{
 	padding-bottom: 5px;
+	background-color: white;
 }
 
 /*Total container ends*/
@@ -201,7 +208,7 @@ section{
 	margin: 5rem auto;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: flex-end;
 	align-items: center;
 }
 
