--- a/public/css/branchManager/menu.css
+++ b/public/css/branchManager/menu.css
@@ -2,6 +2,7 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 .container-1{
     font-size: 14px;
@@ -87,6 +88,7 @@ table{
 
 table td{
     padding: 12px 5px;
+    align-items: center;
     text-align: center;
 }
 
@@ -107,14 +109,17 @@ tbody tr:hover{
 .cell{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    /* border: 1px solid red; */
+    width: 40%;
+    margin: 0 auto;
     /* background-color: tomato; */
 }
 
 .image{
     width: 50px;
     height: 50px;
-    margin-right: 30px;
+    margin-right: 25px;
 }
 
 img{
