--- a/public/css/customer/customer-specialMenu.css
+++ b/public/css/customer/customer-specialMenu.css
@@ -1,26 +1,47 @@
-@import url('https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat&family=Roboto:wght@300&display=swap');
-
-body{
-	/*background-color: rgba(235, 230, 230,0.4);*/
+section{
+	min-height: 20vh;
+	font-size: 1.4rem;
+	display: flex;
+	justify-content: space-around;
 }
 
-.burger-menu {
-	padding-left:  150px;
-	padding-right: 150px;
-	padding-top: 20px;
+.side-panel{
+	width: 15%;
+	margin: 5rem 0;
 }
-
-
-.burger-menu h1{
+.side-panel h2{
 	text-align: center;
-	padding-bottom: 40px;
-	font-size: 60px;
-	font-family: 'Merienda', cursive;
+	border-bottom: 3px solid rgb(255, 138, 0);
+}
+.side-panel ul{
+	display: inline-flex;
+	flex-direction: column;
 	width: 100%;
+	gap: 1.2rem;
+	flex-wrap: wrap;
+	border-bottom: 3px solid rgb(255, 138, 0);
+	padding: 2rem;
+}
+.side-panel ul li{
+	text-align:center;
+	font-size: 1.6rem;
+	
+}
+.side-panel ul li a{
+	color: black;
+	transition: 0.1s ease-in-out;
 }
 
-.burger-menu .burger-container{
-	width: 100%;
+
+.side-panel ul li a:hover{
+	font-weight: bold;
+	color: rgb(255, 138, 0);
+}
+
+
+.burger-container{
+	margin: 5rem 0;
+	width: 80%;
 	display: grid;
 	justify-content: space-evenly;
 	grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
@@ -29,9 +50,10 @@ body{
 
 }
 
-.burger-menu .burger-container .burger-item{
+.burger-container .burger-item{
 	padding: 10px;
 	margin-bottom: 10px;
+	/*background: red;*/
 	position: relative;
 	overflow: hidden;
 	text-align: center;
@@ -41,7 +63,7 @@ body{
 	border: 1px solid rgb(255, 138, 0);
 }
 
-.burger-menu .burger-container .burger-item img{
+.burger-container .burger-item img{
 	width: 260px;
 	 -webkit-transition: all 0.5s ease;
      -moz-transition: all 0.5s ease;
@@ -50,11 +72,11 @@ body{
           transition: all 0.5s ease;
 }
 
-.burger-menu .burger-container .burger-item span{
+.burger-container .burger-item span{
 	font-size: 20px;
 }
 
-.burger-menu .burger-container .burger-item button{
+.burger-container .burger-item button{
 	background-color: transparent;
 	border-radius: 10px;
 	border: 1px solid rgb(255, 138, 0);
@@ -63,7 +85,7 @@ body{
 	cursor: pointer;
 }
 
-.burger-menu .burger-container .burger-item button a{
+.burger-container .burger-item button a{
 	font-size: 16px;
 	font-weight: 600;
 	text-decoration: none;
@@ -72,20 +94,20 @@ body{
 	transition: 0.2s ease-in-out; 
 }
 
-.burger-menu .burger-container .burger-item:hover{
+.burger-container .burger-item:hover{
 	border-bottom: 2px solid rgb(255, 138, 0);
 }
 
-.burger-menu .burger-container .burger-item button:hover{
+.burger-container .burger-item button:hover{
 	background-color: rgba(255, 138, 0,0.7);
 
 }
 
-.burger-menu .burger-container .burger-item button:hover a{
+.burger-container .burger-item button:hover a{
 	color: white;
 }
 
-.burger-menu .burger-container .burger-item:hover img{
+.burger-container .burger-item:hover img{
   -webkit-transform: rotate(-5deg);
      -moz-transform: rotate(-5deg);
        -o-transform: rotate(-5deg);
@@ -96,17 +118,34 @@ body{
 /*Media queries starts*/
 
 @media(max-width: 1155px){
-	.burger-menu h1{
+	.burger-container{
+		width: 100%;
+	}
+	h1{
 		font-size: 50px;
 	}
-	.burger-menu .burger-container .burger-item img{
+ 	.burger-item img{
 		height: auto;
 		width: 100%;
 	}
+	section{
+		flex-direction: column;
+	}
+	.side-panel{
+		width: 100%;
+	}
+	.side-panel ul{
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		gap: 2rem;
+		align-items: center;
+	}
+
 }
 
 @media(max-width: 540px){
-	.burger-menu h1{
+	h1{
 		font-size: 20px;
 	}
 }
