--- a/public/css/cashier/cashier-create-order-special.css
+++ b/public/css/cashier/cashier-create-order-special.css
@@ -15,14 +15,14 @@ body{
   
 }
 .middle-section{
-    height: 120vh;
+    height: 150vh;
     font-size: 14px;
     margin-left: 100px;
 }
  .order-topic{
     margin: 20px;
     margin-top: 10px;
-    height: auto;
+    
     /* background-color: blue; */
 }
  .meta,.balance{
@@ -88,6 +88,11 @@ body{
   .search-container button:hover {
     color: rgb(255, 138, 0);
   }
+  .data-content-scroll{
+      /* background-color: steelblue; */
+      height: 400px;
+      overflow-y: scroll;
+  }
 
  .inventory{
     width: 64%; 
@@ -99,6 +104,7 @@ body{
     box-shadow: 0 0 20px rgb(0, 0,0,0.15);
 
 }
+
 .inventory thead tr {
     background-color:  rgb(255, 138, 0);
     color: rgb(0, 0, 0);
@@ -142,16 +148,12 @@ body{
 #dataTable tbody tr td:nth-child(1) { 
     width: 5%;
 }
-.data-content-scroll{
-    /* background-color: steelblue; */
-    height: 400px;
-    overflow-y: scroll;
-}
 
 #Check-box{
     width: 15px;
     height: 15px;
 }
+
 .add
 {
     font-weight: bold;
@@ -178,7 +180,7 @@ body{
 }
 .del-row{
     width: 90px;
-    height: 25px;
+    height: 20px;
     font-weight:bold;
     border-radius: 10px;
     cursor: pointer;
@@ -210,11 +212,23 @@ body{
     margin-top: 30px;
 }
 .payment{
-    margin-top: 40px;
+    /* margin-top: 40px;
     margin-right: 74px;
-    margin-left: 210px;
-    width: 200px;
+    margin-left: 210px; */
+    width: 450px;
+    display: flex;
+    flex-direction: row;
+    
 }
 .payment h3{
     margin-bottom: 10px;
+    margin-top: 10px;
+}
+.text-box{
+    margin-bottom: 10px;
+    /* background-color: aqua; */
+}
+.text-box input{
+    border: none;
+    border: 2px solid rgb(255, 138, 0);
 }
