--- a/public/css/branchManager/menu.css
+++ b/public/css/branchManager/menu.css
@@ -6,6 +6,7 @@
 }
 .container-1{
     font-size: 14px;
+    min-height: 60vh;
 }
 
 .menu{
@@ -14,7 +15,8 @@
     /* background-color: aqua; */
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
+    margin-left: 100px;
 }
 
 .heading{
@@ -22,8 +24,9 @@
     /* background-color: blue; */
     font-size: 22px;
     font-weight: bold;
-    text-align: center;
-    align-items: center;
+    text-align: left;
+    align-items: left;
+   
 }
 
 .drop-down-btn-container{
@@ -32,7 +35,7 @@
     display: flex;
     justify-content: space-between;
     /* background-color: brown; */
-    align-items: center;
+    align-items:center;
 }
 
 select{
@@ -47,13 +50,9 @@ select{
     margin-top: 10px;
 }
 
-.viewBtn{
-    width: 86px;
-    height: 36px;
-}
 
 .menu-table{
-    visibility: hidden;
+    /*visibility: hidden;*/
     
 }
 .menu-table-active{
@@ -61,7 +60,7 @@ select{
     visibility: visible;
     margin-top: 30px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     /* background-color: chartreuse; */
 }
 
@@ -71,7 +70,7 @@ select{
 
 input[type="number"]
 {
-    padding-left: 30px;
+    padding-left: 20px;
     height: 25px;
     border:none;
     background-color: transparent;
@@ -82,18 +81,19 @@ input[type="number"]:disabled {
   }
 
 table{
-    width: 70%;
+    width: 60%;
     border-collapse: collapse;
 }
 
 table td{
     padding: 12px 5px;
-    align-items: center;
-    text-align: center;
+    align-items: left;
+    text-align: left;
 }
 
 table th{
     padding: 12px 5px;
+    text-align: left;
 }
 
 table thead{
@@ -102,6 +102,10 @@ table thead{
 tr:nth-child(even){
     background-color: #f2f2f2;
 }
+td:nth-child(2){
+    display: flex;
+    /* background-color: yellow; */
+}
 tbody tr:hover{
     border-color: #ddd;
 }
@@ -109,10 +113,10 @@ tbody tr:hover{
 .cell{
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     /* border: 1px solid red; */
-    width: 40%;
-    margin: 0 auto;
+    /* width: 40%;
+    margin: 0 auto; */
     /* background-color: tomato; */
 }
 
@@ -129,9 +133,10 @@ img{
 
 .btn-container{
     height: 60px;
-    width: fit-content;
+    width: 60%;
     margin-top: 40px;
     display: flex;
+    justify-content: center;
     /* background-color: crimson; */
 }
 
@@ -142,7 +147,7 @@ img{
 }
 
 .edit-btn{
-    visibility: hidden;
+    /*visibility: hidden;*/
 }
 .save-btn-active{
     visibility: visible;
@@ -158,7 +163,8 @@ button{
     border: 2px solid rgb(255, 138, 0);
     border-radius: 10px;
     font-size: 16px;
-    padding: 0px 15px;
+    padding: 10px;
+    cursor: pointer;
 }
 
 button:hover{
@@ -167,13 +173,25 @@ button:hover{
 }
 
 select {
-    width: 170px;
+    /* width: 170px;
     border: none;
-    border: 2px solid rgb(255, 138, 0);
+    border-bottom: 2px solid rgb(255, 138, 0);
     box-shadow: 1px 1px #ff5a5a;
     padding: 10px;
     color: back;
     font-weight: bold;
     margin-top: 10px;
-    border-radius: 8px;
+    border-radius: 8px; */
+    width: 200px;
+    border: none;
+    border:nth-child 1px solid rgb(255, 138, 0);
+    box-shadow: 0px 1px rgb(255, 138, 0);
+    padding: 10px;
+    color:back;
+    font-weight: bold;
+    margin-top: 10px;
+    outline: none;
+    /* border-radius: 5px; */
+    background-color:white;
+    
 }
