--- a/public/css/branchManager/dailyRequirement.css
+++ b/public/css/branchManager/dailyRequirement.css
@@ -84,13 +84,13 @@ input[type="number"]:disabled {
   }
 
 table{
-    width: 60%;
+    width: 40%;
     border-collapse: collapse;
 }
 
 table td{
     padding: 12px 5px;
-    align-items: left;
+    align-items: center;
     text-align: left;
 }
 
@@ -105,10 +105,6 @@ table thead{
 tr:nth-child(even){
     background-color: #f2f2f2;
 }
-td:nth-child(2){
-    display: flex;
-    /* background-color: yellow; */
-}
 tbody tr:hover{
     border-color: #ddd;
 }
@@ -116,10 +112,10 @@ tbody tr:hover{
 .cell{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     /* border: 1px solid red; */
-    /* width: 40%;
-    margin: 0 auto; */
+    width: 40%;
+    margin: 0 auto;
     /* background-color: tomato; */
 }
 
@@ -136,7 +132,7 @@ img{
 
 .btn-container{
     height: 60px;
-    width: 60%;
+    width: 40%;
     margin-top: 40px;
     display: flex;
     justify-content: center;
