--- a/public/css/customer/customer-eventHome.css
+++ b/public/css/customer/customer-eventHome.css
@@ -1,9 +1,8 @@
 section{
 	min-height: 70vh;
 	font-size: 1.5rem;
-	width: 70%;
-	margin: 2rem auto;
-	
+	width: 80%;
+	margin: 0 auto;
 }
 
 section div{
