--- a/public/css/owner/index.css
+++ b/public/css/owner/index.css
@@ -5,26 +5,24 @@
   --light: #f1ebe8;
   --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Merienda&family=Montserrat&family=Roboto:wght@300&display=swap');
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
 /* body id */
 #body {
-  margin-top: 65px; 
-  margin-left: 74px;
+  margin-top: 20px; 
+  margin-left: 70px;
   line-height: 1.4;
   transition: margin-left 0.5s;
-
-  /* background-color: #F47558; */
 }
 #body.active{
   margin-left: 310px;
 }
-
 img {
   max-width: 100%;
 }
@@ -37,7 +35,7 @@ img {
 /* Showcase */
 .showcase {
   min-height: 400px;
-  background: url(../../../public/images/owner/owner1.jpg);
+  background: url(../../images/deliveryPerson/showcase.png);
   background-size: cover;
   background-position: center;
   padding-left: 3rem;
@@ -67,19 +65,16 @@ img {
   grid-template-columns: auto auto auto;
   grid-gap: 10px;
   padding: 10px;
-  /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
 }
 .box {
-  /* background-image: linear-gradient(to left,rgba(255,0,61,0.2),rgba(255,137,0,0.7)); */
   text-align: center;
   padding: 1.5rem 2rem;
   box-shadow: var(--shadow);
   box-shadow: 2px 1px rgba(255, 137, 0,1);
 }
 
-/* Info start */
+/* Info */
 .info .logo-description {
-  /* background: var(--primary); */
   display: grid;
   justify-content: space-between;
   margin-top: 15px;
@@ -97,16 +92,14 @@ img {
   font-size: 1rem;
   box-shadow: none;
   line-height: 40px;
-  /* border: 2px solid rgba(255, 137, 0,1); */
 }
 .info h1{
   margin-top: 30px;
-  /* margin-left: 17%; */
   font-size: 30px;
   text-align: center;
   font-weight: bold;
 }
-/*Info end*/
+
 
 /* Responsive */
 @media (max-width: 700px) {
