--- a/public/css/deliveryPerson/deliveryPerson-header.css
+++ b/public/css/deliveryPerson/deliveryPerson-header.css
@@ -80,8 +80,8 @@ a{
     color: rgb(255,138,0);
     font-weight: bold;
 }
-.container .navigation ul li a .icon .fa{
-    font-size: 24px;
+.container .navigation ul li a .icon .fas{
+    font-size: 20px;
 }
 #menuBtn{
     font-size: 20px;
@@ -272,4 +272,17 @@ a{
         width: 100%;
       }
   }
+
+  /*notification Panel css*/
+  .notifi-container{
+    display: none;
+    width: 300px;
+    height: 5vh;
+    opacity: 0;
+    position: absolute;
+    color: black;
+    background-color: whitesmoke;
+    border: 2px solid rgb(255,138,8);
+    transition: 1s opacity, 250ms height;
+}
   
