--- a/public/css/deliveryPerson/table.css
+++ b/public/css/deliveryPerson/table.css
@@ -8,7 +8,7 @@
 h3{
     margin-top: 3%;
     margin-left: 100px;
-    padding: 8px;
+    padding: 8px 8px 8px 0px;
     font-size: 20px;
     font-weight: bold;
 }
