--- a/public/css/owner/owner-account.css
+++ b/public/css/owner/owner-account.css
@@ -26,11 +26,15 @@
     padding: 5px;
     margin: 20px 0  30px 0;
 }
+
 .content .account-container span{
     padding: 5px;
     font-size: 20px;
     font-weight: 600;
 }
+.content .account-container .userDetail-topic{
+    margin-top: 30px;
+} 
 .content .account-container .profile .fa-user{
    font-size: 20vh;
    margin: 10px;
@@ -38,7 +42,7 @@
 }
 .content .account-container .profile{
     border-bottom: 3px solid rgb(255,138,0);
-    border-top:  1px solid rgb(255,138,0) ;
+    /* border-top:  1px solid rgb(255,138,0) ; */
 }
 .content .account-container .text{
     padding: 5px;
@@ -101,6 +105,7 @@ button:hover{
     margin-left: 15px;
     color: black;
 }
-#view-accounts{
-    /*display: none;*/
-}
+.content #view-accounts{
+    /* display:none; */
+} 
+
