--- a/public/css/customer/customer-navbar-index.css
+++ b/public/css/customer/customer-navbar-index.css
@@ -64,6 +64,10 @@ nav{
     font-family: 'Merienda', cursive;
     color: white;
     font-size: 2.5rem;
+    transition: all 650ms ease;
+}
+.logo:hover{
+    color: rgb(255, 138, 0);
 }
 /*.logo i{
     margin: auto;
