--- a/public/css/customer/customer-orderdetails.css
+++ b/public/css/customer/customer-orderdetails.css
@@ -13,7 +13,7 @@ section{
 	width: 40%;
 }
 .order-details .basic-details table tr{
-	background-color: #d6d4d2;
+	background-color: #f2f1f0;
 }
 .order-details .basic-details table tr td:first-child{
 	font-weight: bold;
