--- a/public/css/owner/owner-menu-items.css
+++ b/public/css/owner/owner-menu-items.css
@@ -56,7 +56,7 @@ body{
     min-width: 900px;
     /* border-radius:5px 5px 0 0 ; */
     overflow:hidden ; 
-    box-shadow: 0 0 20px rgb(0, 0,0,0.15);
+    /* box-shadow: 0 0 20px rgb(0, 0,0,0.15); */
 
 }
 .content-table thead tr {
