--- a/public/css/bakery_manager/bakery-manager-daily-requirment.css
+++ b/public/css/bakery_manager/bakery-manager-daily-requirment.css
@@ -22,7 +22,7 @@ body{
     margin-left: 100px;
     margin-top:30px ;
     padding: 0;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: bold;
     display:flex;
     
@@ -59,9 +59,9 @@ body{
     border-collapse: collapse;
     margin: 25px, 0;
     min-width: 900px;
-    border-radius:5px 5px 0 0 ;
+    /* border-radius:5px 5px 0 0 ; */
     overflow:hidden ; 
-    box-shadow: 0 0 20px rgb(0, 0,0,0.15);
+    /* box-shadow: 0 0 20px rgb(0, 0,0,0.15); */
 
 }
 .content-table thead tr {
@@ -82,18 +82,18 @@ body{
     border-bottom: 1px solid #dddddd;
 
 }
-.content-table tbody tr:hover{
+/* .content-table tbody tr:hover{
   background-color: #ffefea;
  height: 47px;
  font-size: 15px;
   
-}
-/* .content-table tbody tr:nth-of-type(even){
-    background-color: #f3f3f3;
 } */
-.content-table tbody tr:last-of-type{
-    border-bottom: 2px solid #e9780e;
+.content-table tbody tr:nth-of-type(even){
+    background-color: #f3f3f3;
 }
+/* .content-table tbody tr:last-of-type{
+    border-bottom: 2px solid #e9780e;
+} */
 
 
 .drop-down-list{
