--- a/public/css/cashier/cashier-ongoing-orders.css
+++ b/public/css/cashier/cashier-ongoing-orders.css
@@ -28,6 +28,11 @@ section{
 	overflow-x: hidden;
 	
 }
+h3{
+	margin-left: 100px;
+	margin-top: 20px;
+
+}
 
 /*Desktop Orders Starts*/
 .order-container{
@@ -39,7 +44,9 @@ section{
 .order-container table{
 	width: 64%;
 	border-collapse: collapse;
-	margin: 60px auto;
+	/* margin: 60px auto; */
+	margin-left: 100px;
+	margin-top: 20px;
 	/* border-spacing: 10px; */
 }
 
@@ -61,7 +68,7 @@ section{
 .order-btn{
 	display: inline-block;
 	position: relative;
-	margin-left: 10%;
+	margin-left: 100px;
 	margin-top: 20px;
 }
 .order-btn span{
@@ -135,9 +142,9 @@ section{
      border-collapse: collapse;
      margin: 25px, 0;
     min-width: 546px;
-     border-radius:5px 5px 0 0 ;
+     /* border-radius:5px 5px 0 0 ; */
     overflow:hidden ; 
-    box-shadow: 0 0 20px rgb(0, 0,0,0.15);
+    /* box-shadow: 0 0 20px rgb(0, 0,0,0.15); */
 
 }
 .content-table thead tr {
@@ -158,12 +165,12 @@ section{
     border-bottom: 1px solid #dddddd;
     /* cursor: pointer; */
 }
-.content-table tbody tr:hover{
+/* .content-table tbody tr:hover{
  background-color: #ffefea;
  height: 47px;
  font-size: 15px;
   
-}
+} */
 /* .content-table tbody tr:nth-of-type(even){
     background-color: #f3f3f3;
 } */
@@ -172,4 +179,7 @@ section{
 } */
 .content-table tbody tr a{
   color:rgb(255, 138, 0);
+}
+.content-table tbody tr:nth-of-type(even){
+    background-color: #f3f3f3;
 }
