--- a/public/css/branchManager/itemWiseSalesReports.css
+++ b/public/css/branchManager/itemWiseSalesReports.css
@@ -25,6 +25,26 @@ body{
     margin-left: 100px;
 
 }
+button{
+    /* border: 2px solid rgb(255, 138, 0);
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: bold; */
+    padding:10px;
+    /* background-color: white; */
+    /* padding: 0.8rem; */
+	background-color: transparent;
+	border-radius: 1rem;
+	border: 2px solid rgb(255, 137, 0);
+	font-weight: bold;
+	cursor: pointer;
+	transition: 0.3s ease-in-out;
+}
+
+button:hover{
+    background-color: rgb(255, 138, 0);
+    color: white;
+}
 
 .sales-topic{
     /* position: absolute; */
@@ -163,8 +183,8 @@ label{
     position:absolute;
     top: 15vh;
 
-    width: 100px;
-    height: 30px;
+    /* width: 100px;
+    height: 30px; */
     font-weight: bold;
     /* padding: 0px 15px; */
     font-size: 16px;
