--- a/public/css/deliveryPerson/deliveryPerson-deliveries.css
+++ b/public/css/deliveryPerson/deliveryPerson-deliveries.css
@@ -131,7 +131,7 @@
     border-bottom: 1px solid black;
 }
 button{
-	padding: 1rem;
+	padding: 10px;
 	background-color: transparent;
 	transition: 0.3s ease-in-out;
     border-radius:  10px;
@@ -251,4 +251,24 @@ button:hover a{
 
 #cash-topay{
     display: none;
+}
+@media(max-width:787px){
+    .delivery-body .del-topic{
+        margin-left: 10px;
+        font-size: 18px;
+    }
+    .delivery-body .row{
+        margin-top: 10px;
+        margin-left: 10px;
+        flex-wrap: nowrap;
+        /* flex-direction: column; */
+    }
+    .delivery-body .row .col{
+        width: 70%;
+        margin-bottom: 10px;
+    }
+    button{
+        padding: 7px;
+        font-size: 14px;
+    }
 }
