--- a/public/css/deliveryPerson/table.css
+++ b/public/css/deliveryPerson/table.css
@@ -55,11 +55,11 @@ table tbody tr td button .fas{
 }
 
 /* responsive */
-@media(max-width:480px){
+@media(max-width:600px){
     h3{
         margin-top: 8%;
         padding: 8px;
-        font-size: 20px;
+        font-size: 17px;
         margin-left: 0%;
     }
     table{
@@ -76,10 +76,12 @@ table tbody tr td button .fas{
     }
     table tr{
         margin-bottom: 15px;
+        border: 2px solid rgb(255, 138, 0);
     }
     table td{
         text-align: right;
         padding-left: 50%;
+        font-size: 14px;
         position: relative;
     }
     table td::before{
@@ -88,7 +90,7 @@ table tbody tr td button .fas{
         left: 0%;
         width: 50%;
         padding-left: 15px;
-        font-size: 15px;
+        font-size: 14px;
         font-weight: bold;
         text-align: left;
     }
