--- a/public/css/deliveryPerson/calander.css
+++ b/public/css/deliveryPerson/calander.css
@@ -239,3 +239,9 @@
         opacity: 1;
     }
 }
+@media(max-width:600px){
+    .calendar{
+       max-width: -webkit-fill-available;;
+    }
+    
+}
