--- a/public/css/deliveryPerson/deliveryPerson-deliveries.css
+++ b/public/css/deliveryPerson/deliveryPerson-deliveries.css
@@ -130,12 +130,6 @@
 .delivery-container .sub-container1 .sub-container2 .answer{
     border-bottom: 1px solid black;
 }
-.total-container{
-    width: 74%;
-}
-.order-details .buttons{
-    width: 74%;
-}
 button{
 	padding: 10px;
 	background-color: transparent;
@@ -257,4 +251,49 @@ button:hover a{
 
 #cash-topay{
     display: none;
+}
+@media(max-width:787px){
+    .delivery-body .del-topic{
+        margin-left: 76px;
+        font-size: 18px;
+    }
+    .overview-body .del-topic{
+        margin-left: 97px;
+        text-align: center;
+    }
+    .delivery-body .row{
+        margin-top: 10px;
+        margin-left: 10px;
+        flex-wrap: nowrap;
+        /* flex-direction: column; */
+    }
+    .delivery-body .history-row{
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    .delivery-body .row .col{
+        width: 70%;
+        margin-bottom: 10px;
+    }
+    button{
+        padding: 7px;
+        font-size: 14px;
+    }
+    .delivery-body .cal-table {
+        margin-top: 5px;
+        margin-left: 10px;
+        display: flex;
+        flex-direction: column;
+        z-index: 5;
+    }
+    .overview-body{
+		height: 0%;
+	}
+    .cal-table .delivery-calander{
+        padding: 20px;
+    }
+    .overview-body .row .col{
+        /* width: 88%; */
+        margin-left: 40px;
+    }
 }
