--- a/public/css/deliveryPerson/deliveryPerson-header.css
+++ b/public/css/deliveryPerson/deliveryPerson-header.css
@@ -53,6 +53,9 @@ a{
     z-index: 100;
 
 }
+.container .navigation ul .logout{
+    display: none;
+}
 .container .navigation ul li a {
     position:  relative;
     width: 100%;
@@ -255,6 +258,9 @@ a{
     }
     .container .navigation ul li{
         margin-top: 0%;
+    }
+    .container .navigation ul .logout{
+        display: block;
     }
     
     #body{
