--- a/public/css/cashier/cashier-complete-details.css
+++ b/public/css/cashier/cashier-complete-details.css
@@ -1,154 +1,287 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap');
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-
-}
-body{
-  padding: 0;
   margin: 0%;
-  width: 100%;
-  height: 110%;
-  font-family: 'Montserrat', sans-serif;
- 
-  
+  padding: 0%;
+  box-sizing: border-box;
 }
-.bgg{
+.container-1{
   font-size: 14px;
+  min-height: 100vh;
+  /* background-color: aqua; */
+}
+.container-2{
+  width: 70%;
+  /* height: 400px; */
+  margin-left: 100px;
+  /* background-color: saddlebrown; */
 
 }
-.content{
+
+.heading{
+  margin-top: 50px;
+}
+
+.topic{ 
+  display: flex; 
+  margin-left: 100px; 
+  margin-top: 30px; 
+  font-size: 22px; 
+  font-weight: bold; 
+} 
+.basic-details{ 
+width: 80%; 
+margin: 3rem 100px 3rem 0; 
+} 
+.basic-details table{ 
+width: 60%; 
+} 
+.basic-details table tr{ 
+background-color: #f5f5f5; 
+} 
+.basic-details table tr td:first-child{ 
+font-weight: bold; 
+} 
+.basic-details table tr td:last-child{ 
+text-align: right; 
+} 
+.basic-details table tr td a{ 
+color: rgb(255, 149, 28); 
+transition: 0.2s ease-in-out; 
+} 
+.basic-details table tr td a:hover{ 
+color: rgb(255, 136, 0); 
+font-weight: bold; 
+}
+
+.order-details-table{
   width: 100%;
-  height: 90vh;
+  margin-top: 30px;
+}
+table{
+  width: 80%;
+  border-collapse: collapse;
 }
 
- 
-
-  .back-arrow{
-    position: absolute;
-    width: 60px;
-    height: 30px;
-    right: 22px;
-    bottom:210px;
- 
-  }
-  #back-hand-point{
-      font-size:22px;
-      color: #000000;
-
-  }
-  #back-hand-point:hover{
-      color:rgb(255, 135,0);
-      font-size: 55px;
-  }
- 
-  
-.order-no{
-    position: absolute;
-    left: 41%;
-    top: 15%; 
-    font-size: 22px;
-    font-weight: bold;
-
-}
-.details{
-    position: absolute;
-    width: 80%; 
-    height: 60vh;
-    top: 22%;
-    left: 7%;
-    background: rgba(255, 198, 131, 0.6);
-
-
-}
-  
-.content-table{
-    
-    position: absolute;
-     width: 90%; 
-    height: 40vh;
-    left: 4%;
-    top: 6%;
-     border-collapse: collapse;
-    box-shadow: 0 0 20px rgb(0, 0,0,0.15);
-    background: rgba(248, 175, 116, 0.6);
-    
-}
-
- tr{
-    text-align: center;
-  
-}
-td{
-    padding:10px;
-}
-
-.content-table tbody tr td{
-    border-right: 2px solid #f77b4a;
-}
-.content-table tbody tr td:last-child{
-    border-right:none;
-}
-
-
-
-.header-container{
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 7vh;
-  background-color: rgb(26, 24, 24);
-  /* z-index: -1; */
-}
-
-.bakeit {
-  /* grid-column: 1 / span 1; */
-  margin-top: 1%;
-  font-family: 'Merienda', cursive;
-  font-weight:bold;
+table td{
+  padding: 12px 5px;
   text-align: left;
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  left: 3%;
-  transition: transform 3s;
-
-
+  align-items: left;
 }
 
-.header-container .user-icon a ,.header-container .bell-icon a{
-  text-decoration: none;
-  color: white;
+table th{
+  padding: 12px 5px;
+  text-align: left;
 }
-.header-container .user-icon a:hover ,.header-container .bell-icon a:hover{
-  color: rgb(255,138,0);
-  
-}
-.header-container .user-icon{
-  position: absolute;
-  left: 90%;
+table th:last-child{
   text-align: right;
-  margin-top: 1.5%;
 }
-.header-container .bell-icon{
+table thead{
+  background-color: rgb(255, 138, 0);
+}
+tr:nth-child(even){
+  background-color: #f2f2f2;
+}
+#orderDetails td:nth-child(2){
+  display: flex;
+  /* background-color: yellow; */
+}
+td:last-child{
+  text-align: right;
+}
+tbody tr:hover{
+  border-color: #ddd;
+}
+.cell{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid red; */
+  /* width: 40%;
+  margin: 0 auto; */
+  /* background-color: tomato; */
+}
+
+.image{
+  width: 50px;
+  height: 50px;
+  margin-right: 25px;
+}
+
+img{
+  width: 50px;
+  height: 50px;
+}
+
+.total-container{ 
+  display: flex; 
+  flex-wrap: wrap; 
+  align-items: flex-end; 
+  flex-direction: column; 
+  width: 60%; 
+  margin: 3rem auto; 
+} 
+.total-container table{ 
+  width: 80%; 
+  max-width: 300px; 
+  border-collapse: collapse; 
+  border-spacing: 10px; 
+  /*margin-right: 150px;*/ 
+  border-top: 3px solid rgb(255, 138, 0); 
+} 
+.total-container table tr td:first-child{ 
+  font-weight: bold; 
+} 
+
+.total-container table td:last-child{ 
+  text-align: right; 
+} 
+.total-container table tr td{ 
+  padding-bottom: 5px; 
+  background-color: white; 
+}
+
+.btn-container{
+  height: 60px;
+  width: 80%;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  /* background-color: crimson; */
+}
+
+
+
+/* button{
+  height: 45px;
+  border: 2px solid rgb(255, 138, 0);
+  border-radius: 10px;
+  font-size: 13px;
+  padding: 0px 15px;
+  margin-left: 0px;
+} */
+
+.btns button{
+  margin-left: 20px;
+}
+/* 
+button:hover{
+  background-color: rgb(255, 138, 0);
+  color: white;
+} */
+
+.popup-container{
+  visibility: hidden;
   position: absolute;
-  left: 90%;
-  text-align: left;
-  margin-left: 46px;
-  margin-top: 1.5%;
+  /* transition: 0s; */
 }
 
-.rate{
-    display: flex;
-    align-items: center;
-    margin-top:27%;
-    margin-left: 40px;
-    width: 250px;
-    height: 30px;
+.popup-container-active{
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.548);
+  position: absolute;
+  z-index: 1000;
+  
+}
+.mid-box{
+  margin-top: 10%;
+  margin-left: 25%;
+  width: 20%;
+  height: fit-content;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  border-radius: 15px;
+  border: 2px solid rgb(255, 138, 0);
+
 }
 
+.mid-box h1{
+  margin-bottom: 20px;
+}
 
+.mid-box-2{
+  margin-top: 10%;
+  margin-left: 25%;
+  width: 40%;
+  height: fit-content;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  border-radius: 15px;
+  border: 2px solid rgb(255, 138, 0);
 
+}
 
+.mid-box-2 h1{
+  margin-bottom: 20px;
+}
+.row1{
+  padding: 0px 10px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  width: 90%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(243, 243, 243);
+}
 
+.star{
+  height: 50px;
+  width: 90%;
+  /* background-color: rgb(228, 228, 228); */
+  border-radius: 10px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.col{
+  width: 90%;
+  height: fit-content;
+  padding: 20px 10px;
+  background-color: rgb(238, 238, 238);
+  border-radius: 10px;
+
+  margin-bottom: 30px;
+}
+
+.checked {
+  color: orange;
+}
+
+.yes-no{
+  width: 70%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+
+button{
+  /* border: 2px solid rgb(255, 138, 0);
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: bold; */
+  padding:10px;
+  /* background-color: white; */
+  /* padding: 0.8rem; */
+background-color: transparent;
+border-radius: 1rem;
+border: 2px solid rgb(255, 137, 0);
+font-weight: bold;
+cursor: pointer;
+/* transition: 0.3s ease-in-out; */
+}
+
+button:hover{
+  background-color: rgb(255, 138, 0);
+  color: white;
+}
