--- a/public/css/cashier/cashier-completed-order.css
+++ b/public/css/cashier/cashier-completed-order.css
@@ -87,3 +87,61 @@ body{
   color: rgb(255, 138, 0);
 }
 
+
+  .table{
+    width: 100%;
+    height: 80vh;
+    margin-left: 100px;
+    margin-top:30px ;
+    padding: 0;
+    /* background-color: red; */
+  }
+  
+.content-table{
+    
+    /* position: absolute; */
+    width: 64%; 
+    height: 190px;
+    /* left: 20%;
+    top: 170px; */
+     border-collapse: collapse;
+     margin: 25px, 0;
+    min-width: 546px;
+     /* border-radius:5px 5px 0 0 ; */
+    overflow:hidden ; 
+    /* box-shadow: 0 0 20px rgb(0, 0,0,0.15); */
+
+}
+.content-table thead tr {
+    background-color:  rgb(255, 138, 0);
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-weight: bold;
+    height: 40px;
+}
+.content-table tbody tr{
+    text-align: center;
+    
+}
+.content-table th .content-table tr{
+    padding: 12px, 15px;
+}
+.content-table tbody tr{
+    border-bottom: 1px solid #dddddd;
+    /* cursor: pointer; */
+}
+/* .content-table tbody tr:hover{
+  background-color: #ffefea;
+ height: 47px;
+ font-size: 15px;
+  
+} */
+.content-table tbody tr:nth-of-type(even){
+    background-color: #f3f3f3;
+}
+/* .content-table tbody tr:last-of-type{
+    border-bottom: 2px solid #e9780e;
+} */
+.content-table tbody tr a{
+  color: rgb(255, 138, 0);
+}
