--- a/public/css/deliveryPerson/deliveryPerson-deliveries.css
+++ b/public/css/deliveryPerson/deliveryPerson-deliveries.css
@@ -61,6 +61,9 @@
    color: black;
    font-size: 20px;
 }
+#Ongoing-Deliveries tbody tr td a{
+    color: rgb(255,138,0);
+}
 .overview-body{
     height: 100vh;
 }
