--- a/public/css/owner/owner-raw-materials.css
+++ b/public/css/owner/owner-raw-materials.css
@@ -14,8 +14,11 @@ body{
  
   
 }
+.rawMaterials-body{
+    min-height: 100vh;
+}
 .middle-section{
-    height: 110vh;
+    max-height: 40vh;
     font-size: 14px;
     margin-left: 100px;
 }
@@ -38,7 +41,7 @@ body{
  .topic{
     margin: 20px;
     margin-left: 4px;
-    margin-top: 10px;
+    margin-top: 60px;
     height: auto;
     /* background-color: blue; */
 }
@@ -132,7 +135,7 @@ body{
 }
 .data-content-scroll{
     /* background-color: steelblue; */
-    height: 400px;
+    max-height: 400px;
     overflow-y: scroll;
 }
 
@@ -176,7 +179,7 @@ body{
     background-color: rgb(255, 138, 0);
 }
 .save-btn{
-    margin-left: 57%;
+    margin-left: 60%;
     margin-top: 50px;
     padding: 10px;
     padding-left: 15px;
