--- a/public/css/deliveryPerson/deliveryPerson-deliveries.css
+++ b/public/css/deliveryPerson/deliveryPerson-deliveries.css
@@ -142,6 +142,7 @@ button{
     text-align: center;
     text-decoration: none;
     font-size: 16px;
+    font-weight: bold;
     transition-duration: 0.4s;
     cursor: pointer;
 }
