--- a/public/css/deliveryPerson/deliveryPerson-wallet.css
+++ b/public/css/deliveryPerson/deliveryPerson-wallet.css
@@ -31,6 +31,7 @@
    border-radius: 10px;
    padding: 10px 20px;
    outline: none;
+   font-weight: bold;
 }
 @media(max-width:700px){
     .wallet-container{
@@ -51,6 +52,7 @@
     }
     .wallet-container .text .text-fill input {
         width: 76%;
-        padding: 10px 5px;
+        /* padding: 10px 15px; */
+        margin-left: 36px;
     }
 }
