--- a/public/css/owner/owner-reviews.css
+++ b/public/css/owner/owner-reviews.css
@@ -46,6 +46,7 @@
     text-align: center;
     text-decoration: none;
     font-size: 16px;
+    font-weight: bold;
     transition-duration: 0.4s;
     cursor: pointer;
 }
