--- a/public/css/customer/customer-messageboxes.css
+++ b/public/css/customer/customer-messageboxes.css
@@ -7,7 +7,7 @@
 
 .confirm-alert {
   padding: 20px;
-  background-color: #35f076;
+  background-color: #77c22d;
   color: white;
   border-radius: 10px;
 }
