--- a/public/css/customer/customer-cart.css
+++ b/public/css/customer/customer-cart.css
@@ -96,7 +96,7 @@ section{
 }
 
 /*button container starts*/
-/*this nutton container contains the empty button and update cart button*/
+/*this button container contains the empty button and update cart button*/
 .button-container{
 	display: flex;
 	flex-wrap: wrap;
@@ -209,6 +209,18 @@ section{
 }
 #quick-cart{
 	left: 0;
+}
+
+.no-burger{
+	width: 80%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	margin: 5rem auto;
+}
+.no-burger span{
+	font-size: 4rem;
 }
 /*Desktop Cart ends*/
 
