--- a/public/css/customer/customer-cart.css
+++ b/public/css/customer/customer-cart.css
@@ -19,6 +19,12 @@ section{
 	align-items: flex-end;
 }
 
+form{
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+}
+
 .cart-containter table{
 	width: 80%;
 	border-collapse: collapse;
@@ -30,7 +36,9 @@ section{
 .cart-containter table td button{
 	background-color: transparent;
 	align-items: center;
-	border-width: 0px;
+	/*border-width: 0px;*/
+	border: none;
+	margin: 0;
 	cursor: pointer;
 	transition: 0.2s ease-in-out;
 }
@@ -39,7 +47,7 @@ section{
 	font-size: 25px;
 	cursor: pointer;
 	transition: 0.2s ease-in-out;
-	color: rgba(212, 44, 81,0.9);
+	color: rgba(212, 44, 81,0.8);
 }
 
 .cart-containter table td  button .far:hover{
@@ -72,11 +80,12 @@ section{
 	padding: 5px;
 }
 
-.cart-containter input{
+.cart-containter .quantity-feilds input{
 	width: 50px;
 	height: 40px;
 	text-align: center;
 	border-radius: 5px;
+	
 }
 
 .cart-containter .product-container{
@@ -105,7 +114,7 @@ section{
 	margin: 10px auto;
 }
 
-.button-container button{
+.button-container button,.button-container input{
 	padding: 10px;
 	background-color: white;
 	border-radius: 5px;
@@ -116,7 +125,7 @@ section{
 	margin-left: 10px;
 }
 
-.button-container button:hover{
+.button-container button:hover, .button-container input:hover{
 	background-color: rgba(255, 138, 0,1);
 	color: white;
 }
