--- a/public/css/customer/customer-checkout.css
+++ b/public/css/customer/customer-checkout.css
@@ -311,6 +311,54 @@ section{
 
 /*Payment Method Ends*/
 
+/*Total container starts*/
+.total-container{
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-end;
+	flex-direction: column;
+	width: 80%;
+	margin: 60px auto;
+}
+.total-container table{
+	width: 100%;
+	max-width: 300px;
+	border-collapse: collapse;
+	border-spacing: 10px;
+	/*margin-right: 150px;*/
+	border-top: 3px solid rgb(255, 138, 0);
+}
+.total-container table tr td:first-child{
+	font-weight: bold;
+}
+
+.total-container table td:last-child{
+	text-align: right;
+}
+.total-container table tr td{
+	padding-bottom: 5px;
+}
+.total-container a{
+	padding-top: 5px;
+}
+.total-container button{
+	padding: 10px;
+	background-color: white;
+	border-radius: 5px;
+	border: 2px solid rgb(255, 138, 0);
+	cursor: pointer;
+	transition: 0.2s ease-in-out;
+	font-weight: 600;
+}
+
+.total-container button:hover{
+	background-color: rgba(255, 138, 0,1);
+	color: white;
+
+}
+/*Total container ends*/
+
+/*Place order starts*/
 .placeorder{
 	width: 80%;
 	margin: 0 auto;
@@ -334,3 +382,5 @@ section input[type="submit"]:hover{
 	background-color: rgba(255, 138, 0,1);
 	color: white;
 }
+
+/*Plcae order ends*/
